--- a/cplusplus/libpana/Makefile.in
+++ b/cplusplus/libpana/Makefile.in
@@ -308,15 +308,15 @@ PANA_SRC = src/pana_config_manager.cxx \
             src/pana_session.cxx
 
 include_HEADERS = $(PANA_HDRS)
-sysconf_DATA = config/config.xsd \
-               config/dictionary.dtd \
+sysconf_DATA = config/dictionary.dtd \
                config/dictionary.xml \
                config/paa.xml \
                config/pac.xml \
+               config/config.dtd \
                config/pana_auth.bat \
                config/shared_secret.bin \
-               config/users.xml \
-               config/users.xsd
+               config/users.dtd \
+               config/users.xml
 
 lib_LTLIBRARIES = libpana.la
 libpana_la_SOURCES = $(PANA_SRC) $(PANA_HDRS) $(PLATFORM_SRC)
