--- a/cplusplus/libdiametercc/Makefile.am
+++ b/cplusplus/libdiametercc/Makefile.am
@@ -40,6 +40,7 @@ include_HEADERS = $(DIAMETER_CC_HDR)
 sysconfdir = $(prefix)/etc/opendiameter/diametercc
 sysconf_DATA = config/client.local.xml \
                config/configuration.xml \
+               config/configuration.dtd \
                config/dictionary.dtd \
                config/dictionary.xml \
                config/server.local.xml
