--- a/cplusplus/libdiametereap/Makefile.in
+++ b/cplusplus/libdiametereap/Makefile.in
@@ -302,6 +302,7 @@ include_HEADERS = $(DIAMETER_EAP_HDR)
 sysconf_DATA = config/client.eap-tls.xml \
                  config/client.local.xml \
                  config/configuration.xml \
+                 config/configuration.dtd \
                  config/dictionary.dtd \
                  config/dictionary.xml \
                  config/server.eap-tls.xml \
