--- a/cplusplus/applications/aaa/Makefile.in
+++ b/cplusplus/applications/aaa/Makefile.in
@@ -229,14 +229,11 @@ AM_CPPFLAGS = @L_CPPFLAGS@ \
 
 AM_LDFLAGS = @L_LDFLAGS@
 nobase_sysconf_DATA = config/aaad.xml \
-                      config/aaad.xsd \
                       config/aaad_diameter_dictionary.dtd \
                       config/aaad_diameter_dictionary.xml \
                       config/aaad_diameter_server.xml \
-                      config/aaad_diameter_server.xsd \
                       config/aaad_eap_shared_secret.bin \
-                      config/aaad_user_db.xml \
-                      config/aaad_user_db.xsd
+                      config/aaad_user_db.xml
 
 aaad_SOURCES = $(SRC) $(HDR) 
 aaad_LDADD = $(top_builddir)/libeap/libeap.la \
