--- a/cplusplus/libdiametermip4/Makefile.in
+++ b/cplusplus/libdiametermip4/Makefile.in
@@ -295,6 +295,7 @@ sysconf_DATA = config/aaas_s.local.xml \
                config/aaas_s2.local.xml \
                config/client.local.xml \
                config/configuration.xml \
+               config/configuration.dtd \
                config/dictionary.dtd \
                config/dictionary.xml \
                config/fac.local.xml \
