--- a/cplusplus/libdiameternasreq/Makefile.am
+++ b/cplusplus/libdiameternasreq/Makefile.am
@@ -38,6 +38,7 @@ include_HEADERS = $(DIAMETER_NASREQ_HDR)
 sysconfdir = $(prefix)/etc/opendiameter/diameternasreq
 sysconf_DATA = config/client.local.xml \
                config/configuration.xml \
+               config/configuration.dtd \
                config/dictionary.dtd \
                config/dictionary.xml \
                config/server.local.xml
