--- a/cplusplus/libdiameternasreq/Makefile.in
+++ b/cplusplus/libdiameternasreq/Makefile.in
@@ -258,6 +258,7 @@ libdiameternasreq_la_AR = $(AR) -qcs
 include_HEADERS = $(DIAMETER_NASREQ_HDR)
 sysconf_DATA = config/client.local.xml \
                config/configuration.xml \
+               config/configuration.dtd \
                config/dictionary.dtd \
                config/dictionary.xml \
                config/server.local.xml
