--- a/cplusplus/Makefile.in
+++ b/cplusplus/Makefile.in
@@ -229,6 +229,9 @@ SUBDIRS = $(SUBDIRS_LIBS) $(SUBDIRS_APPS)
 DIST_SUBDIRS = $(SUBDIRS_LIBS) $(SUBDIRS_APPS)
 include_HEADERS = $(top_srcdir)/include/framework.h \
                   $(top_srcdir)/include/aaa_parser_api.h \
+                  $(top_srcdir)/include/aaa_global_config.h \
+                  $(top_srcdir)/include/aaa_dictionary_api.h \
+                  $(top_srcdir)/include/aaa_parser_defs.h \
                   $(top_srcdir)/include/resultcodes.h
 
 all: all-recursive
