Added HPUX to configure script
git-svn-id: svn://svn.code.sf.net/p/diameter/svn@309 c7ec899b-d015-0410-9a68-a346fd343c46

--- a/cplusplus/configure.in
+++ b/cplusplus/configure.in
@@ -96,6 +96,14 @@ case $host in
      AC_SUBST(L_LIBS, ["-lssl -lcrypto -lACE_SSL -lACE -lACEXML -lACEXML_Parser"])
      AC_SUBST(HOST_OS, [OS_LINUX])
   ;;
+
+  *-*-hpux*)
+     L_CPPFLAGS="-Wall -Wno-sign-compare -I$XERCESCROOT/include -I$XERCESCROOT/include/xercesc -I$ACE_ROOT -I$BOOST_ROOT"
+     L_LDFLAGS="-L$ACE_ROOT/ace -L$XERCESCROOT/lib"
+     L_LIBS="-lxerces-c -lssl -lcrypto -lACE_SSL -lACE"
+     HOST_OS=OS_HPUX
+  ;;
+
   *)
      AC_MSG_ERROR([Unsupported OS]); 
 esac
