Moved to shared library model again
git-svn-id: svn://svn.code.sf.net/p/diameter/svn@319 c7ec899b-d015-0410-9a68-a346fd343c46

--- a/cplusplus/applications/aaa/Makefile.am
+++ b/cplusplus/applications/aaa/Makefile.am
@@ -34,7 +34,7 @@ nobase_sysconf_DATA = config/aaad.xml \
                       config/aaad_eap_shared_secret.bin \
                       config/aaad_user_db.xml
 
-aaad_SOURCES = $(SRC) $(HDR) 
+aaad_SOURCES = $(HDR) $(SRC) 
 aaad_LDADD = $(top_builddir)/libeap/libeap.la \
 	$(top_builddir)/libeap/libeaparchie.la $(top_builddir)/libdiametereap/libdiametereap.la \
 	$(top_builddir)/libdiameter/libdiameter.la $(top_builddir)/libdiamparser/libdiamparser.la \
