--- a/cplusplus/configure.in
+++ b/cplusplus/configure.in
@@ -4,7 +4,7 @@ AC_INIT(OpenDiameter, 1.0.7-i, vfajardo@tari.toshiba.com)
 AM_INIT_AUTOMAKE([subdir-objects])
 
 # Program Defaults
-AC_DISABLE_SHARED
+AC_ENABLE_SHARED
 
 # Use of libtool
 AC_PROG_LIBTOOL
