--- a/cplusplus/libdiametermip4/Makefile
+++ b/cplusplus/libdiametermip4/Makefile
@@ -134,15 +134,15 @@ CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 srcdir = .
 
-ACLOCAL = ${SHELL} /home/victorf/work/sf/svn/cplusplus/missing --run aclocal-1.9
+ACLOCAL = ${SHELL} /root/work/builds/opendiameter/cplusplus/missing --run aclocal-1.9
 AMDEP_FALSE = #
 AMDEP_TRUE = 
-AMTAR = ${SHELL} /home/victorf/work/sf/svn/cplusplus/missing --run tar
+AMTAR = ${SHELL} /root/work/builds/opendiameter/cplusplus/missing --run tar
 AR = ar
-AUTOCONF = ${SHELL} /home/victorf/work/sf/svn/cplusplus/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/victorf/work/sf/svn/cplusplus/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/victorf/work/sf/svn/cplusplus/missing --run automake-1.9
-AWK = gawk
+AUTOCONF = ${SHELL} /root/work/builds/opendiameter/cplusplus/missing --run autoconf
+AUTOHEADER = ${SHELL} /root/work/builds/opendiameter/cplusplus/missing --run autoheader
+AUTOMAKE = ${SHELL} /root/work/builds/opendiameter/cplusplus/missing --run automake-1.9
+AWK = mawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2
@@ -151,7 +151,7 @@ CPPFLAGS =
 CXX = g++
 CXXCPP = g++ -E
 CXXDEPMODE = depmode=gcc3
-CXXFLAGS = -g -O2
+CXXFLAGS = 
 CYGPATH_W = echo
 DEFS = -DPACKAGE_NAME=\"OpenDiameter\" -DPACKAGE_TARNAME=\"opendiameter\" -DPACKAGE_VERSION=\"1.0.7-i\" -DPACKAGE_STRING=\"OpenDiameter\ 1.0.7-i\" -DPACKAGE_BUGREPORT=\"vfajardo@tari.toshiba.com\" -DPACKAGE=\"opendiameter\" -DVERSION=\"1.0.7-i\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_DLFCN_H=1 -DHAVE_IFADDRS_H=1 -DHAVE_SHADOW_H=1 -DHAVE__BOOL=1 -DHAVE_STDBOOL_H=1 -DHAVE_GETIFADDRS=1
 DEPDIR = .deps
@@ -176,13 +176,13 @@ LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LIBTOOL_DEPS = ./ltmain.sh
 LN_S = ln -s
 LTLIBOBJS = 
-L_CPPFLAGS = -Wall -I/usr/src/ACE_wrappers-5.5 -I/usr/include -g -fno-strict-aliasing
-L_CXXFLAGS = -Wall -I/usr/src/ACE_wrappers-5.5 -I/usr/include -g -fno-strict-aliasing
-L_LDFLAGS = -L/usr/src/ACE_wrappers-5.5/ace
+L_CPPFLAGS = -Wall -I/usr/local/src/ACE_wrappers-5.5 -I/usr/include -fno-strict-aliasing
+L_CXXFLAGS = -Wall -I/usr/local/src/ACE_wrappers-5.5 -I/usr/include -fno-strict-aliasing
+L_LDFLAGS = -L/usr/local/src/ACE_wrappers-5.5/ace
 L_LIBS = -lssl -lcrypto -lACE_SSL -lACE -lACEXML -lACEXML_Parser
 L_MPAFLAGS = 
 L_ODBCFLAGS = 
-MAKEINFO = ${SHELL} /home/victorf/work/sf/svn/cplusplus/missing --run makeinfo
+MAKEINFO = ${SHELL} /root/work/builds/opendiameter/cplusplus/missing --run makeinfo
 OBJEXT = o
 OPT_EAP_ARCHIE_FALSE = 
 OPT_EAP_ARCHIE_TRUE = #
@@ -231,7 +231,7 @@ host_vendor = pc
 htmldir = ${docdir}
 includedir = $(prefix)/include/opendiameter/diametermip4
 infodir = ${datarootdir}/info
-install_sh = /home/victorf/work/sf/svn/cplusplus/install-sh
+install_sh = /root/work/builds/opendiameter/cplusplus/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
@@ -247,7 +247,7 @@ sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
 sysconfdir = $(prefix)/etc/opendiameter/diametermip4
 target_alias = 
-AM_CPPFLAGS = -Wall -I/usr/src/ACE_wrappers-5.5 -I/usr/include -g -fno-strict-aliasing  \
+AM_CPPFLAGS = -Wall -I/usr/local/src/ACE_wrappers-5.5 -I/usr/include -fno-strict-aliasing  \
               -I../include \
               -I../libodutl/include \
               -I../libdiamparser/include \
@@ -256,7 +256,7 @@ AM_CPPFLAGS = -Wall -I/usr/src/ACE_wrappers-5.5 -I/usr/include -g -fno-strict-al
               -I./include \
               -DOS_LINUX
 
-AM_LDFLAGS = -L/usr/src/ACE_wrappers-5.5/ace
+AM_LDFLAGS = -L/usr/local/src/ACE_wrappers-5.5/ace
 DIAMETER_MIP_SRC = src/diameter_mip4_amr_parser.cxx \
                    src/diameter_mip4_ama_parser.cxx \
                    src/diameter_mip4_har_parser.cxx \
