--- a/cplusplus/configure.in
+++ b/cplusplus/configure.in
@@ -92,8 +92,11 @@ case $host in
   *-*-linux*)
      AC_SUBST(L_CPPFLAGS, ["-Wall -I$ACE_ROOT -I$BOOST_ROOT -fno-strict-aliasing"])
      AC_SUBST(L_CXXFLAGS, ["-Wall -I$ACE_ROOT -I$BOOST_ROOT -fno-strict-aliasing"])
-     AC_SUBST(L_LDFLAGS, ["-L$ACE_ROOT/ace"])
-     AC_SUBST(L_LIBS, ["-lssl -lcrypto -lACE_SSL -lACE -lACEXML -lACEXML_Parser"])
+     AC_SUBST(L_LDFLAGS, ["-L$ACE_ROOT/lib"])
+     AC_SUBST(L_LIBS, [" -lssl -lcrypto -lACE_SSL -lACE -lACEXML_Parser -lACEXML -lACE -lpthread"])
+     if test "$enable_shared" = "no"; then
+        AC_SUBST(L_LIBS, [" -lssl -lcrypto -lACE_SSL -lACE -lACEXML_Parser -lACEXML -lACE -lpthread $LIBS"])
+     fi
      AC_SUBST(HOST_OS, [OS_LINUX])
   ;;
 
