Pre-compile version for gpsk fsm
git-svn-id: svn://svn.code.sf.net/p/diameter/svn@360 c7ec899b-d015-0410-9a68-a346fd343c46

--- a/cplusplus/libeap/Makefile.am
+++ b/cplusplus/libeap/Makefile.am
@@ -38,6 +38,10 @@ CORE_HDR = include/eap_api.h \
 	include/eap_archie_fsm.hxx \
 	include/eap_archie_parser.hxx \
 	include/eap_archie.hxx \
+	include/eap_gpsk_crypto.hxx \
+	include/eap_gpsk_fsm.hxx \
+	include/eap_gpsk_parser.hxx \
+	include/eap_gpsk.hxx \
 	include/eap_tls.hxx \
 	include/eap_tls_mng.hxx \
 	include/eap_tls_session.hxx \
@@ -75,6 +79,8 @@ CORE_HDR = include/eap_api.h \
 	include/eap_archie_fsm.hxx \
 	include/eap_archie_parser.hxx \
 	include/eap_archie.hxx \
+	include/eap_gpsk_crypto.hxx \
+	include/eap_gpsk_fsm.hxx \
 	include/eap_gpsk_parser.hxx \
 	include/eap_gpsk.hxx
 endif
