Updated nasd to support GPSK
git-svn-id: svn://svn.code.sf.net/p/diameter/svn@376 c7ec899b-d015-0410-9a68-a346fd343c46

--- a/cplusplus/applications/nas/Makefile.am
+++ b/cplusplus/applications/nas/Makefile.am
@@ -44,7 +44,7 @@ nasd_SOURCES = $(SRC) $(HDR)
 nasd_LDADD = @L_LIBS@ \
              $(top_builddir)/libpana/libpana.la \
              $(top_builddir)/libeap/libeap.la \
-             $(top_builddir)/libeap/libeaparchie.la \
+             $(top_builddir)/libeap/libeapgpsk.la \
              $(top_builddir)/libdiameter/libdiameter.la \
              $(top_builddir)/libdiameternasreq/libdiameternasreq.la \
              $(top_builddir)/libdiametereap/libdiametereap.la \
