--- a/cplusplus/libdiametermip4/Makefile
+++ b/cplusplus/libdiametermip4/Makefile
@@ -134,55 +134,54 @@ CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 srcdir = .
 
-ACLOCAL = ${SHELL} /home/testbed/work/testbed/common/builds/sourceforge/diameter/cplusplus/missing --run aclocal-1.9
+ACLOCAL = ${SHELL} /root/work/testbed/common/builds/sourceforge/diameter/cplusplus/missing --run aclocal-1.9
 AMDEP_FALSE = #
 AMDEP_TRUE = 
-AMTAR = ${SHELL} /home/testbed/work/testbed/common/builds/sourceforge/diameter/cplusplus/missing --run tar
+AMTAR = ${SHELL} /root/work/testbed/common/builds/sourceforge/diameter/cplusplus/missing --run tar
 AR = ar
-AUTOCONF = ${SHELL} /home/testbed/work/testbed/common/builds/sourceforge/diameter/cplusplus/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/testbed/work/testbed/common/builds/sourceforge/diameter/cplusplus/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/testbed/work/testbed/common/builds/sourceforge/diameter/cplusplus/missing --run automake-1.9
+AUTOCONF = ${SHELL} /root/work/testbed/common/builds/sourceforge/diameter/cplusplus/missing --run autoconf
+AUTOHEADER = ${SHELL} /root/work/testbed/common/builds/sourceforge/diameter/cplusplus/missing --run autoheader
+AUTOMAKE = ${SHELL} /root/work/testbed/common/builds/sourceforge/diameter/cplusplus/missing --run automake-1.9
 AWK = gawk
-CC = /usr/bin/g++
+CC = gcc
 CCDEPMODE = depmode=gcc3
 CFLAGS = -g -O2
-CPP = /usr/bin/g++ -E
+CPP = gcc -E
 CPPFLAGS = 
-CXX = /usr/bin/g++
-CXXCPP = /usr/bin/g++ -E
+CXX = g++
+CXXCPP = g++ -E
 CXXDEPMODE = depmode=gcc3
-CXXFLAGS = -I/home/testbed/work/testbed//common/builds/ACE_wrappers-5.6/install/include
+CXXFLAGS = -ggdb -O0
 CYGPATH_W = echo
-DEFS = -DPACKAGE_NAME=\"OpenDiameter\" -DPACKAGE_TARNAME=\"opendiameter\" -DPACKAGE_VERSION=\"1.0.7-i\" -DPACKAGE_STRING=\"OpenDiameter\ 1.0.7-i\" -DPACKAGE_BUGREPORT=\"vfajardo@tari.toshiba.com\" -DPACKAGE=\"opendiameter\" -DVERSION=\"1.0.7-i\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_DLFCN_H=1 -DHAVE_IFADDRS_H=1 -DHAVE_SHADOW_H=1 -DHAVE_STDBOOL_H=1 -DHAVE_GETIFADDRS=1
+DEFS = -DPACKAGE_NAME=\"OpenDiameter\" -DPACKAGE_TARNAME=\"opendiameter\" -DPACKAGE_VERSION=\"1.0.7-i\" -DPACKAGE_STRING=\"OpenDiameter\ 1.0.7-i\" -DPACKAGE_BUGREPORT=\"vfajardo@tari.toshiba.com\" -DPACKAGE=\"opendiameter\" -DVERSION=\"1.0.7-i\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_DLFCN_H=1 -DHAVE_IFADDRS_H=1 -DHAVE_SHADOW_H=1 -DHAVE__BOOL=1 -DHAVE_STDBOOL_H=1 -DHAVE_GETIFADDRS=1 
 DEPDIR = .deps
 ECHO = echo
 ECHO_C = 
 ECHO_N = -n
 ECHO_T = 
-EGREP = /bin/grep -E
+EGREP = grep -E
 EXEEXT = 
-F77 = gfortran
+F77 = f95
 FFLAGS = -g -O2
-GREP = /bin/grep
 HOST_OS = OS_LINUX
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = ${SHELL} $(install_sh) -c -s
-LDFLAGS = -L/home/testbed/work/testbed//common/builds/ACE_wrappers-5.6/install/lib
+LDFLAGS = 
 LIBOBJS = 
 LIBS = 
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LIBTOOL_DEPS = ./ltmain.sh
 LN_S = ln -s
 LTLIBOBJS = 
-L_CPPFLAGS = -Wall -I/home/testbed/work/testbed//common/builds/ACE_wrappers-5.6/install -I/home/testbed/work/testbed//common/builds/boost -fno-strict-aliasing
-L_CXXFLAGS = -Wall -I/home/testbed/work/testbed//common/builds/ACE_wrappers-5.6/install -I/home/testbed/work/testbed//common/builds/boost -fno-strict-aliasing
-L_LDFLAGS = -L/home/testbed/work/testbed//common/builds/ACE_wrappers-5.6/install/lib
+L_CPPFLAGS = -Wall -I/usr/local/include -I/usr/include -fno-strict-aliasing
+L_CXXFLAGS = -Wall -I/usr/local/include -I/usr/include -fno-strict-aliasing
+L_LDFLAGS = -L/usr/local/include/lib
 L_LIBS =  -lssl -lcrypto -lACE_SSL -lACE -lACEXML_Parser -lACEXML -lACE -lpthread
 L_MPAFLAGS = 
 L_ODBCFLAGS = 
-MAKEINFO = ${SHELL} /home/testbed/work/testbed/common/builds/sourceforge/diameter/cplusplus/missing --run makeinfo
+MAKEINFO = ${SHELL} /root/work/testbed/common/builds/sourceforge/diameter/cplusplus/missing --run makeinfo
 OBJEXT = o
 OPT_EAP_ARCHIE_FALSE = 
 OPT_EAP_ARCHIE_TRUE = #
@@ -199,9 +198,12 @@ SET_MAKE =
 SHELL = /bin/sh
 STRIP = strip
 VERSION = 1.0.7-i
-ac_ct_CC = /usr/bin/g++
-ac_ct_CXX = 
-ac_ct_F77 = gfortran
+ac_ct_AR = ar
+ac_ct_CC = gcc
+ac_ct_CXX = g++
+ac_ct_F77 = f95
+ac_ct_RANLIB = ranlib
+ac_ct_STRIP = strip
 am__fastdepCC_FALSE = #
 am__fastdepCC_TRUE = 
 am__fastdepCXX_FALSE = #
@@ -219,36 +221,29 @@ build_os = linux-gnu
 build_vendor = pc
 compile_EAPTLS_FALSE = 
 compile_EAPTLS_TRUE = #
-datadir = ${datarootdir}
-datarootdir = ${prefix}/share
-docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
-dvidir = ${docdir}
+datadir = ${prefix}/share
 exec_prefix = ${prefix}
 host = i686-pc-linux-gnu
 host_alias = 
 host_cpu = i686
 host_os = linux-gnu
 host_vendor = pc
-htmldir = ${docdir}
 includedir = $(prefix)/include/opendiameter/diametermip4
-infodir = ${datarootdir}/info
-install_sh = /home/testbed/work/testbed/common/builds/sourceforge/diameter/cplusplus/install-sh
+infodir = ${prefix}/info
+install_sh = /root/work/testbed/common/builds/sourceforge/diameter/cplusplus/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
-localedir = ${datarootdir}/locale
 localstatedir = ${prefix}/var
-mandir = ${datarootdir}/man
+mandir = ${prefix}/man
 mkdir_p = mkdir -p --
 oldincludedir = /usr/include
-pdfdir = ${docdir}
 prefix = /usr/local
 program_transform_name = s,x,x,
-psdir = ${docdir}
 sbindir = ${exec_prefix}/sbin
 sharedstatedir = ${prefix}/com
 sysconfdir = $(prefix)/etc/opendiameter/diametermip4
 target_alias = 
-AM_CPPFLAGS = -Wall -I/home/testbed/work/testbed//common/builds/ACE_wrappers-5.6/install -I/home/testbed/work/testbed//common/builds/boost -fno-strict-aliasing  \
+AM_CPPFLAGS = -Wall -I/usr/local/include -I/usr/include -fno-strict-aliasing  \
               -I../include \
               -I../libodutl/include \
               -I../libdiamparser/include \
@@ -257,7 +252,7 @@ AM_CPPFLAGS = -Wall -I/home/testbed/work/testbed//common/builds/ACE_wrappers-5.6
               -I./include \
               -DOS_LINUX
 
-AM_LDFLAGS = -L/home/testbed/work/testbed//common/builds/ACE_wrappers-5.6/install/lib
+AM_LDFLAGS = -L/usr/local/include/lib
 DIAMETER_MIP_SRC = src/diameter_mip4_amr_parser.cxx \
                    src/diameter_mip4_ama_parser.cxx \
                    src/diameter_mip4_har_parser.cxx \
