--- a/cplusplus/libdiametermip4/Makefile
+++ b/cplusplus/libdiametermip4/Makefile
@@ -177,7 +177,7 @@ CXXCPP = g++ -E
 CXXDEPMODE = depmode=gcc3
 CXXFLAGS = -g -O2 -I/usr/include/openssl
 CYGPATH_W = echo
-DEFS = -DPACKAGE_NAME=\"OpenDiameter\" -DPACKAGE_TARNAME=\"opendiameter\" -DPACKAGE_VERSION=\"1.0.7-h\" -DPACKAGE_STRING=\"OpenDiameter\ 1.0.7-h\" -DPACKAGE_BUGREPORT=\"ron.brash@gmail.com\" -DPACKAGE_URL=\"\" -DPACKAGE=\"opendiameter\" -DVERSION=\"1.0.7-h\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_DLFCN_H=1 -DLT_OBJDIR=\".libs/\" -DHAVE_IFADDRS_H=1 -DHAVE_SHADOW_H=1 -DHAVE_OPENSSL_MD5_H=1 -DHAVE_OPENSSL_RAND_H=1 -DHAVE__BOOL=1 -DHAVE_STDBOOL_H=1 -DHAVE_GETIFADDRS=1
+DEFS = -DPACKAGE_NAME=\"OpenDiameter\" -DPACKAGE_TARNAME=\"opendiameter\" -DPACKAGE_VERSION=\"1.0.7-h\" -DPACKAGE_STRING=\"OpenDiameter\ 1.0.7-h\" -DPACKAGE_BUGREPORT=\"ron.brash@gmail.com\" -DPACKAGE_URL=\"\" -DPACKAGE=\"opendiameter\" -DVERSION=\"1.0.7-h\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_DLFCN_H=1 -DLT_OBJDIR=\".libs/\" -DEAPDEFINE=1 -DBOOST_SPIRIT_THREADSAFE=1 -DHAVE_IFADDRS_H=1 -DHAVE_SHADOW_H=1 -DHAVE_OPENSSL_MD5_H=1 -DHAVE_OPENSSL_RAND_H=1 -DHAVE__BOOL=1 -DHAVE_STDBOOL_H=1 -DHAVE_GETIFADDRS=1
 DEPDIR = .deps
 DLLTOOL = false
 DSYMUTIL = 
